--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Socket.io client for real-time chat -->
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 </body>
 
 </html>
